--- a/JS10/JS10(RNN)_P2.ipynb
+++ b/JS10/JS10(RNN)_P2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN1y71Im6puFReQtp1VqhDk",
+      "authorship_tag": "ABX9TyP8bP7cNMeFU3DTsoFXtRIp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TJjR-7Hw7yiE"
       },
@@ -97,7 +97,7 @@
         "id": "m6Bg1-ot8x8Q",
         "outputId": "eeb836d8-2e31-4ab7-f717-0530bd3266ba"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "id": "jYIqzUow9cmg",
         "outputId": "dbc41085-2cff-4ecd-8eb6-5480cc1b554f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
         "id": "HpfO8kZ_9klG",
         "outputId": "a5090da2-7904-4ad7-c2e5-32194df9af78"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
         "id": "eclR8Cdr9m09",
         "outputId": "091cebaf-be2d-46be-949f-f7b8b97f000a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,7 @@
         "id": "sPEyTpn195xJ",
         "outputId": "ed761bb5-b37b-4706-dbcf-90e4090f949f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
       "metadata": {
         "id": "uFU2R7lt-ex3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -305,7 +305,7 @@
         "id": "88JRhZNI-ooT",
         "outputId": "c7508d8f-22e6-4fb9-abe4-61fbfcc26c06"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,7 +339,7 @@
       "metadata": {
         "id": "1B-dlbRM_Ini"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +364,7 @@
         "id": "Mfwzpbqd_My4",
         "outputId": "481d9255-623d-4afb-9118-f00fe2671bab"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +399,7 @@
         "id": "iOw4UgF9_rbk",
         "outputId": "a6009ddf-221e-45a4-aaed-0c36c79e9001"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +422,7 @@
       "metadata": {
         "id": "K8g0CAlF_wMt"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -474,7 +474,7 @@
         "id": "PVe1_aJoAGg6",
         "outputId": "c72679d0-8177-4b93-dfa4-5599075931f6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
       "metadata": {
         "id": "tLJj03Z_AG4Q"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -512,7 +512,7 @@
         "id": "EszP8aknAO64",
         "outputId": "ee499fb7-21e9-4e52-f2d1-88d7698e104c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,7 +540,7 @@
       "metadata": {
         "id": "jxf2RUwgAU2h"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -567,7 +567,7 @@
         "id": "OMa8Xf6oAoH-",
         "outputId": "5d9b6e07-617c-45f5-ba53-8249fa15241a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,7 +608,7 @@
         "id": "bRKJd8Z5Asc-",
         "outputId": "2cf8b4a8-995a-4f99-c5b4-eecaa7d9e622"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,7 @@
       "metadata": {
         "id": "BUqajwCCAzv2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -658,7 +658,7 @@
         "id": "-CHNN71OA9Fa",
         "outputId": "80727270-689e-43e2-9de9-029f306c841c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -681,7 +681,7 @@
       "metadata": {
         "id": "GVdjgzjuA_uW"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -698,7 +698,7 @@
         "id": "Z-QZv7acBCfu",
         "outputId": "502ab27a-d757-49fa-b005-ae46ebcd348d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +755,7 @@
         "id": "Ll1Pac3BCKUU",
         "outputId": "1e46cfb6-58b4-456e-8578-d7f6f5454f77"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -793,7 +793,7 @@
       "metadata": {
         "id": "SqtkQcqGCXhm"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -824,7 +824,7 @@
       "metadata": {
         "id": "VjTZm6EPCm7F"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -838,7 +838,7 @@
       "metadata": {
         "id": "akURwtAUCpex"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -853,7 +853,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Coba jalankan model dan cek apakah sidah sesuai dengan output\n",
+        "Coba jalankan model dan cek apakah sudah sesuai dengan output\n",
         "\n",
         "pertama, cek bentuk dari output"
       ],
@@ -875,7 +875,7 @@
         "id": "YmzO0mUFDTet",
         "outputId": "6cabf060-902c-4a0a-ffb8-7e8df221163a"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,7 +907,7 @@
         "id": "8QuY43xjDdM4",
         "outputId": "07897a78-2a2d-4e4b-b006-34ebe84c5b0c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -950,7 +950,7 @@
       "metadata": {
         "id": "ewQ-_282Djka"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -976,7 +976,7 @@
         "id": "AnIaN8SiDruj",
         "outputId": "6f41bc3a-ab13-4b84-abda-61ccaaff7c08"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1035,7 +1035,7 @@
       "metadata": {
         "id": "faRjGhjDESMT"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1052,7 +1052,7 @@
         "id": "MjF2XLUvEVhB",
         "outputId": "1d28ff25-bf5b-40a1-b45e-9b3635858317"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1085,7 +1085,7 @@
         "id": "J4vFQK01EaqT",
         "outputId": "747433ac-7b41-49bb-b6e4-ca8d5bbf9dd2"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1116,7 +1116,7 @@
       "metadata": {
         "id": "R6nbE0dMEbTX"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1152,7 +1152,7 @@
       "metadata": {
         "id": "qLW7R0DhEx7_"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1181,7 +1181,7 @@
       "metadata": {
         "id": "iNzhtPKjE5cy"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1196,7 +1196,7 @@
         "id": "pmn8ut8KE77X",
         "outputId": "61cbb519-cdb9-474d-dddd-f66e676862d0"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1334,7 +1334,7 @@
       "metadata": {
         "id": "Z720vYP_FAs_"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1345,7 +1345,7 @@
       "metadata": {
         "id": "KuwRf2T9Fnz9"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1381,7 +1381,7 @@
         "id": "lzU3pmSEFv3U",
         "outputId": "1e334c54-6ff3-45f7-cafb-cbd975dd7f9e"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1463,7 +1463,7 @@
         "id": "DQH2Eff-F-G0",
         "outputId": "91a667a8-1277-4bd3-93b7-8b4de9cb93ae"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1514,7 +1514,7 @@
         "id": "Fx7rglWOGPgV",
         "outputId": "8dc40bbb-848d-4660-b661-ce057e97eb91"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1547,7 +1547,7 @@
         "id": "b-eybsJfGRwV",
         "outputId": "a4447c3c-94e5-4a2b-ea01-b10f77769bb6"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
