--- a/JS11/CNN_Praktikum2.ipynb
+++ b/JS11/CNN_Praktikum2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyND8YrG76mW9/dr06NXbR/y",
+      "authorship_tag": "ABX9TyNIZDDAjg/9MgywZHhmQ0cS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "metadata": {
         "id": "_TNeDKP5kBqh"
       },
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "Oo3d_z1Bks8J"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "id": "8p0C5ydqk28C",
         "outputId": "dd6bf76b-bed3-40a7-b2a7-44762db7da4b"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -163,6 +163,7 @@
       "cell_type": "code",
       "source": [
         "model = models.Sequential()\n",
+        "# modifikasi untuk tugas praktikum\n",
         "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3), padding='same'))\n",
         "model.add(layers.Conv2D(32, (3, 3), activation='relu', padding='same'))\n",
         "model.add(layers.MaxPooling2D((2, 2)))\n",
@@ -179,7 +180,7 @@
       "metadata": {
         "id": "Ze_SdoAylJhD"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +204,7 @@
         "id": "D5eBs2DUlNjA",
         "outputId": "791e7c94-17cb-4ea2-c717-24b5f302acf6"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,6 +263,7 @@
       "cell_type": "code",
       "source": [
         "from keras.api._v2.keras import activations\n",
+        "# modifikasi untuk tugas praktikum\n",
         "model.add(layers.Flatten())\n",
         "model.add(layers.Dense(128, activation='relu'))\n",
         "model.add(layers.Dropout(0.2))\n",
@@ -270,7 +272,7 @@
       "metadata": {
         "id": "-2mTOxU4lUq1"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,7 +296,7 @@
         "id": "oJDxk5FBlXbo",
         "outputId": "002bd291-86f0-4e84-c61e-d79345415b17"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,7 +369,7 @@
       "metadata": {
         "id": "DbLwicRJlczH"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -392,7 +394,7 @@
         "id": "1OvwwbAqlpFh",
         "outputId": "8d0b6052-1411-40cf-af20-44156b96fd4f"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +493,7 @@
         "id": "9AFKuYEllxdX",
         "outputId": "7fc75073-8cb0-402e-a3ea-14859665d40b"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +535,7 @@
         "id": "fZPBjnj8l21a",
         "outputId": "bea9bb08-bac7-4e8a-f809-2751bbf7f24f"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
